# outbound-cockpit

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  server.js
.cursor/: mcp.json
api/: cockpit-seen.js  cockpit.js
api/agent/: analyse-stream.js  analyse.js  chat.js  classify.js
api/ai/: analyse.js  classify.js
api/internal/tools/: apify-search.js  apollo-enrich.js  apollo-org.js  apollo-search.js  enrich-org.js  get-prospect.js  linkedin-profile.js  list-openers.js  scrape-site.js  upsert-prospect.js  web-research.js
api/leads/: apify-search.js  apify.js  apollo-enrich.js  apollo-org.js  apollo.js  org-lookup.js  reddit.js
docs/: API.md  ARCHITECTURE.md  DEMO.md  DEPLOY.md  DESIGN.md  FOLDER_STRUCTURE.md  FUTURE.md
docs/screenshots/: README.md
lib/: agent-url.js  internal-auth.js  mongo.js  openers.js  org-lookup.js  read-body.js  web-research.js
outreach-agent/: Dockerfile  pyproject.toml  requirements.txt
outreach-agent/agent/: graph.py  llm.py  nodes.py  planner.py  prompts.py  routers.py  state.py  streaming.py  tool_catalog.py  tools.py
outreach-agent/agent/api/: main.py
outreach-agent/eval/: __init__.py  golden_set.json  run_eval.py
outreach-agent/mcp_server/: __init__.py  bridge.py  server.py
outreach-agent/memory/: __init__.py  mongo_memory.py
outreach-agent/tests/: test_planner.py  test_routers.py
public/: cockpit.html
scripts/: check-apollo.mjs
tests/: internal.test.js
