[project]
name = "outreach-agent"
version = "1.0.0"
description = "LangGraph outreach agent with FastMCP tool server for Outbound Cockpit"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.28.0",
  "python-dotenv>=1.0.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "mcp>=1.0.0",
  "pymongo>=4.10.0",
  "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*", "agent*", "memory*", "eval*"]
